Created final draft of paper

--- a/paper/flocking_simulator.tex
+++ b/paper/flocking_simulator.tex
@@ -1,7 +1,6 @@
 \documentclass[10pt, twocolumn]{article}
 \usepackage{titling}
 \usepackage{fullpage}
-\usepackage{multicol}
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{placeins}
@@ -14,7 +13,7 @@
 \graphicspath{{../data/plots/}{../data/snapshots/}}
 
 \title{Massively Parallel Agent-Based Flocking Simulation}
-\author{Kevin O'Neill and Mitchell Mellone}
+\author{Kevin O'Neill \hspace{3cm} Mitchell Mellone \\ oneilk4@rpi.edu \hfill mellom3@rpi.edu}
 \date{}
 
 \begin{document}
@@ -33,8 +32,8 @@
 \section*{Visualization}
 \input{visualization.tex}
 
-\section*{Performance Results}
 \FloatBarrier
+\section*{Performance Results}
 \input{performance.tex}
 \FloatBarrier
 
