--- a/paper/references.bib
+++ b/paper/references.bib
@@ -60,3 +60,10 @@ doi = {10.1145/604045.604089},
 publisher = {ACM},
 address = {New York, NY, USA}
 }
+
+@article{Lorek,
+  title={Parallel bird flocking simulation},
+  author={Lorek, Helmut and White, Matthew},
+  journal={Parallel Processing for Graphics and Scientific Visualization},
+  year={1993}
+}
